--- a/src/style.css
+++ b/src/style.css
@@ -34,9 +34,9 @@ body {
 header {
   height: 4.8rem;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-  /* position: absolute; */
+  position: absolute;
+  margin-left: 4rem;
+  gap: 13rem;
   z-index: 100;
   margin-top: 4rem;
   background-color: transparent;
@@ -99,6 +99,24 @@ width: 35.7rem;
   width: 90rem;
   height: 91.4rem;
   background-color: var(--main-background);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.big-picture {
+  margin-top: 17.4rem;
+}
+
+.mini-gallery {
+  display: flex;
+  gap: 3.7rem;
+}
+
+.mini-gallery li a img:hover {
+  border-bottom: .5rem solid var(--button)
 }
 
 .title-shoe{
@@ -128,4 +146,36 @@ width: 35.7rem;
   color: #FFF;
   background-color: var(--button);
   cursor: pointer;
+}
+
+footer {
+  height: 16.7rem;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.social ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 9rem;
+
+  font-weight: 700;
+}
+
+.explore {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.4rem;
+  background-color: #000;
+  padding: 7rem 11.6rem;
+}
+
+.explore a {
+  font-size: 2.41rem;
+  font-weight: 700;
+  color: #FFF;
 }
